<resources>
    <string name="app_name">Smart Vending Machine</string>
    <string name="Bienvenidos">Bienvenidos</string>
    <string name="IngreseDNI">Nombre de Usuario</string>
    <string name="Ingresar">Ingresar</string>
    <string name="title_activity_main_menu">Menu Principal</string>
    <string name="title_activity_user_historty">Historial Compras</string>
    <string name="title_activity_user_account">Mi Cuenta</string>
    <string name="title_activity_begin_purchase">Ejecutando Compra</string>

    <string name="text_bluetooth_off">Bluetooth Apagado, Enciéndalo</string>
    <string name="text_bluetooth_on">Bluetooth Encendido</string>

    <string name="text_enable">Activar</string>
    <string name="text_disable">Desactivar</string>

    <string name="text_view_paired">Dispositivos Vinculados</string>
    <string name="text_scan_devices">Sincronización Dispositivos</string>
    <string name="text_connect_devices">Conectar Dispositivos</string>
    <string name="text_stop_scan">Escanear dispositivos</string>

    <string name="text_list_paired_devices">Dispositivos sincronizados</string>
    <string name="text_list_devices">Lista de Dispositivos</string>

    <string name="list_item_text_pair">Sincronizar</string>
    <string name="list_item_default_address">000000000</string>
    <string name="list_item_default_device_name">Galaxy Nexus</string>
    <string name="cancel_discovery">Cancelar</string>
    <string name="discovery_dialog_message">Escaneando…</string>
    <string name="no_devices_available_message">No hay dispositivos Bluetooth disponibles en este
        momento.
    </string>
    <string name="bluetooth_unsopported_message">Lamentablemente su dispositivo no soporta
        Bluetooth.
    </string>
    <string name="bluetooth_on">Bluetooth Encendido</string>
    <string name="bluetooth_disable">Desactivar Bluetooth</string>
    <string name="bluetooth_off">Bluetooth Apagado, Enciéndalo</string>
    <string name="bluetooth_enable">Activar Bluetooth</string>
    <string name="pair_device_first_message">Por favor, primero debe sincronizar el dispositivo.
    </string>
    <string name="connection_opened_message">\nConnection Opened!\n</string>
    <string name="connection_closed_message">\nConnection Closed!\n</string>
    <string name="enable_bluetooth">Encender Bluetooth</string>
    <string name="historial_de_compras">Historial Compras</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="confirmar_compra">Confirmar Compra</string>
    <string name="cancelar_compra">Cancelar Compra</string>
    <string name="error_title">Ooops!</string>
    <string name="error_message">Hubo un error, intente nuevamente.</string>
    <string name="error_ok_button">Ok</string>
    <string name="error_red_no_disponible">No esta conectado a la red</string>
    <string name="Password">Contraseña</string>
    <string name="levante_un_producto_para_iniciar_la_compra">Para comprar, levante 1 producto a la vez.
    </string>
    <string name="_saldo_sin_actualizar">$0.00</string>
</resources>
