<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

    <Button
        android:id="@+id/bondDeviceButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:text="@string/list_item_text_pair" />

    <TextView
        android:id="@+id/deviceAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_default_address"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/deviceNameTextView"
        android:layout_alignLeft="@+id/deviceNameTextView"
        android:layout_alignStart="@+id/deviceNameTextView"
        android:layout_alignRight="@+id/deviceNameTextView"
        android:layout_alignEnd="@+id/deviceNameTextView"/>
    <TextView
        android:id="@+id/deviceNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:text="@string/list_item_default_device_name"
        android:layout_alignTop="@+id/imageViewDeviceIcon"
        android:layout_toRightOf="@+id/imageViewDeviceIcon"
        android:layout_toEndOf="@+id/imageViewDeviceIcon" android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" app:srcCompat="@drawable/ic_block_black_24dp"
        android:id="@+id/imageViewDeviceIcon"
        android:layout_alignBottom="@+id/bondDeviceButton" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>