<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.proyectofinal.smartvendingmachine.ui.connection.BeginPurchaseActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selección de Productos"
        android:id="@+id/menuPrincipalLabel"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/beginPurchaseButton"
        android:textAlignment="center" android:layout_toLeftOf="@+id/saldoImageView"
        android:layout_toStartOf="@+id/saldoImageView"
        android:layout_alignBottom="@+id/saldoImageView"
        android:gravity="center"/>

    <TextView
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/_saldo_sin_actualizar"
        android:id="@+id/saldoLabel"
        android:textSize="18sp"
        android:textColor="#FF000000"
        android:textAlignment="textEnd"
        android:layout_width="wrap_content"
        android:layout_below="@+id/saldoImageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saldoImageView"
        android:src="@drawable/coin_icon"
        android:adjustViewBounds="true"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Begin"
        android:id="@+id/buttonStart"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickStart" android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send"
        android:id="@+id/buttonSend"
        android:onClick="onClickSend"
        android:layout_below="@+id/editText"
        android:layout_toRightOf="@+id/buttonStart"
        android:layout_toEndOf="@+id/buttonStart" android:visibility="gone"/>

    <!--TextView
        android:layout_width="wrap_content"
        android:id="@+id/textViewDebugg"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:minLines="1"
        android:maxLines = "400"
        android:scrollbars = "vertical"
        android:layout_above="@+id/confirmarCompraButton"
        android:elevation="1dp" android:layout_height="20dp"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stop"
        android:id="@+id/buttonStop"
        android:layout_below="@+id/editText"
        android:layout_toRightOf="@+id/buttonSend"
        android:layout_toEndOf="@+id/buttonSend"
        android:onClick="onClickStop" android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear"
        android:id="@+id/buttonClear"
        android:layout_below="@+id/editText"
        android:layout_toRightOf="@+id/buttonStop"
        android:layout_toEndOf="@+id/buttonStop"
        android:onClick="onClickClear" android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_compra"
        android:id="@+id/confirmarCompraButton"
        android:layout_above="@+id/cancelarCompraButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#49c647"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar_compra"
        android:id="@+id/cancelarCompraButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#FFDC2424"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/saldoLabel" android:layout_above="@+id/textViewTotal"/>

    <TextView
        android:text="@string/levante_un_producto_para_iniciar_la_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@android:id/empty"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" android:textColor="@color/colorPrimary"
        android:textAlignment="center"/>
    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:id="@+id/textViewMontoCompra"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        tools:text="@string/_saldo_sin_actualizar" android:layout_above="@+id/confirmarCompraButton"
        android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textViewTotal" android:textAlignment="viewEnd"
        android:paddingBottom="8dp" android:visibility="invisible" android:textStyle="normal|bold"/>
    <TextView
        android:text="Total:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTotal" android:textSize="24sp"
        android:textAlignment="viewStart" android:layout_above="@+id/confirmarCompraButton"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:paddingBottom="8dp" android:visibility="invisible" android:textStyle="normal|bold"/>

</RelativeLayout>